--- a/app_python/.gitignore
+++ b/app_python/.gitignore
@@ -1,14 +1,51 @@
 # Python
 __pycache__/
 *.py[cod]
+*.pyo
+*.pyd
+*.so
+*.dll
+*.egg
+*.egg-info/
+dist/
+build/
+
+# Virtual Environment
 venv/
-*.log
+.venv/
+env/
+.env/
+
+# Testing
 .pytest_cache/
 .coverage
+.coverage.*
+*.cover
+htmlcov/
+coverage.xml
+.cache/
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
 
 # OS
 .DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Docker
+.dockerignore
+Dockerfile
+docker-compose*.yml
+
+# Secrets (никогда не коммитить!)
+*.key
+*.pem
+.env.local
+.env.production
